Fixed alignment

--- a/client/src/css/homepage.css
+++ b/client/src/css/homepage.css
@@ -68,7 +68,6 @@ p {
     /* outline: 3px solid rgb(197, 32, 32); */
 }
 
-
 #formWrapper {
     height: 40px;
 
@@ -125,18 +124,15 @@ input[type="time"] {
     border: 3px solid blue;
   } */
 
-
 ::placeholder {
     color: var(--lightgrey);
     font-size: var(--small);
     padding-left: 5px;
-
 }
 
 #sortingContainer {
-
     display: grid;
-  
+
     grid-template-columns: 40px repeat(11, 1fr);
     margin-bottom: 10px;
 
@@ -159,9 +155,7 @@ input[type="time"] {
     color: var(--blue);
     font-size: var(--tiny);
     border-bottom: var(--lightlightblue) 2px solid;
-
 }
-
 
 .sortingBtn:hover {
     all: unset;
@@ -172,14 +166,14 @@ input[type="time"] {
     align-items: center;
     justify-content: center;
     text-align: center;
-    
+
     line-height: 1.3;
     color: var(--blue);
     font-size: var(--tiny);
     font-weight: bold;
     border-bottom: var(--lightlightblue) 2px solid;
 
-    transition:font-size 300ms ease-in-out;
+    transition: font-size 300ms ease-in-out;
 }
 
 #dataContainer {
@@ -209,10 +203,9 @@ input[type="time"] {
     width: 100vw;
     display: grid;
     grid-gap: 10px;
-  
-    grid-template-columns: 40px repeat(10, 1fr);
-    align-items: center;
 
+    grid-template-columns: 40px repeat(10, minmax(100px, 1fr));
+    align-items: center;
 
     /* outline: 3px solid rgb(56, 18, 211); */
 }
@@ -221,8 +214,7 @@ input[type="time"] {
     width: 100vw;
     display: grid;
     grid-gap: 10px;
-    /* grid-template-columns: 40px minmax(400px, 1fr) minmax(400px, 1fr) 100px 300px 2fr 50px; */
-    grid-template-columns: 40px repeat(11, 1fr);
+    grid-template-columns: 40px repeat(11, minmax(100px, 1fr));
     align-items: center;
 
     /* outline: 3px solid rgb(56, 18, 211); */
@@ -262,7 +254,7 @@ button:hover {
 }
 
 #seeAllPatientsLink {
-    all:unset;
+    all: unset;
 
     margin-bottom: 1rem;
 
